compile success, segmentation fault

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ endif(COMMAND cmake_policy)
 set(Environment_SRCS
 #	environment.cc
 #	agent.cc
+	environment_pendulum1.h
 	environment_pendulum1.cc
 	agent_pendulum1.cc
 #	Tests/Custom_Integrated_Env_Codec.cpp
@@ -19,7 +20,7 @@ set(Environment_SRCS
 set(RLGLUE_LIBRARIES
 	rlutils
 	m
-	rlglue
+#	rlglue
 #	rlgluenetdev
 )
 
